--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jspsych": "git+https://github.com/jspsych/jsPsych.git#v6.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3"
   },
   "scripts": {
